--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "ws": "^8.18.0"
   }
 }
